# falcon-deps

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
falcon_deps/: __init__.py  app.py  initializer.py  json_dep.py  request_body.py  test.py  view.py
tests/: conftest.py  test_request_body.py  test_resource.py  utils.py
