[tool.poetry]
name = "falcon-deps"
version = "0.1.0"
description = ""
authors = ["chandr-andr (Kiselev Aleksandr) <chandr@chandr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskiq-dependencies = "^1.5.4"
falcon = "^4.0.0"
uvicorn = "^0.32.0"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
